2011-08-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/network-stream.el (network-stream-open-starttls): Support
	using starttls.el without using gnutls-cli.

2011-08-17  Juri Linkov  <juri@jurta.org>

	* progmodes/grep.el (rgrep): Handle the case when
	`grep-find-command' is a cons cell (bug#9278).

2011-08-17  Martin Rudalics  <rudalics@gmx.at>

	* window.el (display-buffer-pop-up-frame): Run frame creation
	function with BUFFER current (as special-display-popup-frame
	does).  Reported by Drew Adams.

2011-08-17  Daiki Ueno  <ueno@unixuser.org>

	* epa-mail.el: Simplify GnuPG group expansion using
	epg-expand-group.
	(epa-mail-group-alist, epa-mail-group-modtime)
	(epa-mail-gnupg-conf-file, epa-mail-parse-groups)
	(epa-mail-sync-groups, epa-mail-expand-recipient-1)
	(epa-mail-expand-recipients-2, epa-mail-expand-recipients):
	Remove.

2011-08-16  Feng Li <fengli@gmail.com> (tiny change)

	* calc/calc-ext.el (math-defintegral-2): Remove nested backquote.

2011-08-16  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-engine.el (c-state-cache-non-literal-place):
	Correct, to avoid the inside of macros.

2011-08-16  Richard Stallman  <rms@gnu.org>

	* epa-mail.el: Handle GnuPG group definitions.
	(epa-mail-group-alist, epa-mail-group-modtime)
	(epa-mail-gnupg-conf-file): New variables.
	(epa-mail-parse-groups, epa-mail-sync-groups)
	(epa-mail-expand-recipient-1, epa-mail-expand-recipients-2)
	(epa-mail-expand-recipients): New functions.
	(epa-mail-encrypt): Call epa-mail-expand-recipients.

	* mail/rmail.el (rmail-epa-decrypt): New command.

	* epa.el (epa-decrypt-region): New arg MAKE-BUFFER-FUNCTION.
	Don't bind buffer-read-only, just inhibit-read-only.
	(epa--find-coding-system-for-mime-charset): Fix the non-xemacs case.
	(epa-decrypt-armor-in-region): Make error message clearer.

2011-08-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (completion-pcm--merge-completions): Don't merge "a1b"
	and "a2b" to "ab" for `prefix'.
